--- a/package.json
+++ b/package.json
@@ -9,13 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.8",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@types/react": "~18.2.14",
+    "axios": "^1.5.1",
+    "expo": "~49.0.15",
+    "expo-constants": "~14.4.2",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.3.0",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "1.7.1",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-ui-lib": "^7.9.1",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react-native": "~0.64.12",
+    "tailwindcss": "^3.3.5"
   },
   "private": true
 }
