--- a/package.json
+++ b/package.json
@@ -9,24 +9,35 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-clipboard/clipboard": "^1.12.1",
+    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-native-community/geolocation": "^3.1.0",
+    "@react-native-firebase/auth": "^18.7.1",
+    "@react-native-firebase/firestore": "^18.7.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.13",
     "@types/react": "~18.2.14",
     "axios": "^1.5.1",
     "expo": "~49.0.15",
+    "expo-clipboard": "~4.3.1",
     "expo-constants": "~14.4.2",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.3.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.7.1",
+    "react-native-phone-input": "^1.3.7",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-ui-lib": "^7.9.1",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "expo-location": "~16.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
